<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.surveysapp.viewModel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:transitionName="@string/text_transition_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_login" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="@string/text_transition_logo"
            app:layout_constraintBottom_toTopOf="@id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_white_small" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/Edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/view_dimen_ml"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textWatcher="@{viewModel.loginTextWatcher}"
            app:layout_constraintBottom_toTopOf="@id/llPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/view_dimen_ml"
            android:layout_marginTop="@dimen/view_dimen_m"
            android:background="@drawable/bg_edittext_auth"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                style="@style/Edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/view_dimen_s"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textWatcher="@{viewModel.loginTextWatcher}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="@{viewModel.clickResetListener}"
                android:paddingHorizontal="@dimen/view_dimen_m"
                android:text="@string/label_forgot"
                android:textColor="@color/white_50" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/view_dimen_ml"
            android:layout_marginTop="@dimen/view_dimen_m"
            android:background="@drawable/bg_button_auth"
            android:enabled="false"
            android:onClick="@{viewModel.clickLoginListener}"
            android:paddingVertical="@dimen/view_dimen_m"
            android:text="@string/label_login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llPassword" />

        <ProgressBar
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_button_auth"
            android:elevation="@dimen/view_dimen_xs"
            android:onClick="@{null}"
            android:paddingVertical="@dimen/view_dimen_ms"
            android:viewVisible="@{viewModel.isEnableLoading}"
            app:layout_constraintBottom_toBottomOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="@id/btnLogin"
            app:layout_constraintTop_toTopOf="@id/btnLogin"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>