<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.surveysapp.viewModel.ForgotPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_dimen_m"
            android:onClick="@{viewModel.clickBackListener}"
            android:padding="@dimen/view_dimen_s"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/logo_width_login"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tvResetGuide"
            app:layout_constraintDimensionRatio="240:99"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/logo_nimble" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvResetGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/view_dimen_ml"
            android:gravity="center"
            android:text="@string/label_reset_guide"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/view_dimen_ml"
            android:background="@drawable/bg_edittext_auth"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/view_dimen_m"
            android:textColorHint="@color/color_hint"
            android:textSize="@dimen/text_size_medium"
            android:textWatcher="@{viewModel.emailTextWatcher}"
            app:layout_constraintBottom_toTopOf="@id/btnReset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/view_dimen_ml"
            android:layout_marginTop="@dimen/view_dimen_m"
            android:background="@drawable/bg_button_auth"
            android:enabled="false"
            android:onClick="@{viewModel.clickResetListener}"
            android:paddingVertical="@dimen/view_dimen_m"
            android:text="@string/label_reset"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <ProgressBar
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_button_auth"
            android:elevation="@dimen/view_dimen_xs"
            android:indeterminateTint="@color/white"
            android:onClick="@{null}"
            android:paddingVertical="@dimen/view_dimen_ms"
            android:viewVisible="@{viewModel.isEnableLoading}"
            app:layout_constraintBottom_toBottomOf="@id/btnReset"
            app:layout_constraintEnd_toEndOf="@id/btnReset"
            app:layout_constraintStart_toStartOf="@id/btnReset"
            app:layout_constraintTop_toTopOf="@id/btnReset"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>